<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ReminderReader</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sync">Sync</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_edit">Edit</string>
    <string name="add">Add</string>
    <string name="title">Title:</string>
    <string name="body">Body:</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="date">Date:</string>
    <string name="edit">Edit</string>
    <string name="ReminderServiceUrl">ReminderServiceUrl</string>
    <string name="serviceUrlSummary">Service base URL</string>
    <string name="serviceUrl">Service URL</string>
    <string name="purge">Purge</string>
    <string name="state">State:</string>
    <string name="title_activity_sync">SyncActivity</string>
    <string name="start">Start</string>
    <string name="SyncDate">SyncDate</string>
    <string name="title_activity_log">LogActivity</string>
    <string-array name="source_list">
        <item>All</item>
        <item>API</item>
    </string-array>
</resources>
